syntax = "proto3";
import "credits.proto";

package net.imadz.infrastructure.proto;

// Represents a participant that handles the from account in a transaction
message FromAccountParticipantPO {
  string from_user_id = 1;
  net.imadz.infrastructure.proto.MoneyPO amount = 2;
}

message ToAccountParticipantPO {
  string to_user_id = 1;
  net.imadz.infrastructure.proto.MoneyPO amount = 2;
}